# AI_huoke-

./: .env.prod  .gitignore  .pre-commit-config.yaml  README.md  _backend_status_check.py  _check_collector_network.py  _check_server.py  _debug_backend_start.py  _deploy_bg.py  _deploy_check.py  _deploy_check_fast.py  _deploy_fix_and_start.py  _deploy_remote.py  _deploy_run.py  _deploy_steps.py  _diag.py  _fix_backend_env_and_restart.py  _fix_cors_and_restart.py  _fix_env.py  _fix_env_inject.py  _free_port_and_start_backend.py  _hotfix_entrypoint_and_recover.py  _inspect_env_remote.py  _net_check.py  _net_check2.py  _port_verify.py  _redeploy_config_fix.py  _redeploy_fast.py  _tmp_check.py  _tmp_count_tables.py  _tmp_diag.py  _tmp_diag2.py  _tmp_run_backfill.py  _verify_remote.py  browser_collector.service  build.ps1  deploy.ps1  deploy.sh  package-lock.json  requirements.txt  (+19 more)
.github/: 浏览器采集  (+2 more)
backend/: .env.example  .env.server  .flake8  Dockerfile  QUICKSTART.md  README.md  alembic.ini  backend.spec  check_db_state.py  check_embedding_type.py  create_test_user.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  init_db.py  main.py  pyproject.toml  pytest-focus.xml  pytest-uat-errperm.xml  pytest-uat-evidence.xml  requirements.txt  review_diff.txt  seed_mvp_data.py  server.py  setup-venv.sh  test_api.py  test_main.py  test_material_pipeline_postgres_regression.py  test_user_service_postgres_regression.py  火山方舟_Responses_API_调用指南.md
backend/alembic/: env.py
backend/app/: app_factory.py  celery_app.py  main.py
backend/scripts/: seed_knowledge.py
(+611 files in other folders)
