[tool.poetry]
name = "zhihuokeke-backend"
version = "0.1.0"
description = "AI Content Acquisition System Backend"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "<5"
python-multipart = "^0.0.6"
aiohttp = "^3.9.1"
requests = "^2.31.0"
httpx = "^0.25.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
python-dotenv = "^1.0.0"
email-validator = "^2.1.0"
ollama = "^0.0.55"
redis = "^5.0.1"
pillow = "^10.0.0"
pytesseract = "^0.3.10"

[tool.poetry.dev-dependencies]
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
	"regression: backend regression test suite",
	"postgres_regression: requires PostgreSQL and explicit RUN_POSTGRES_REGRESSION=1",
]
